[package]
name = "rcat"
version = "0.1.0"
authors = ["umaumax <umauma7083@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = "2.33.0"
anyhow = "1.0.28"
strum_macros = "0.18.0"
strum = "0.18.0"
