[package]
name = "features-ex-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["fuga","enable-lib-piyo"]
fuga=[]
enable-lib-piyo = [ "features-ex-lib/piyo" ]

[dependencies]
features-ex-lib = { path = "../features-ex-lib" }
